// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders as not toggled 1`] = `
<label
  className="ax-toggle ax-toggle--small ax-toggle--enabled ax-space--x2"
>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={false}
      className="ax-toggle__input"
      disabled={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;

exports[`Toggle renders as toggled 1`] = `
<label
  className="ax-toggle ax-toggle--small ax-toggle--enabled ax-space--x2"
>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={true}
      className="ax-toggle__input"
      disabled={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;

exports[`Toggle renders with disabled 1`] = `
<label
  className="ax-toggle ax-toggle--small ax-space--x2"
>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={false}
      className="ax-toggle__input"
      disabled={true}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;

exports[`Toggle renders with label children 1`] = `
<label
  className="ax-toggle ax-toggle--small ax-toggle--enabled ax-space--x2"
>
  <span
    className="ax-toggle__label"
  >
    Toggle
  </span>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={false}
      className="ax-toggle__input"
      disabled={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;

exports[`Toggle renders with size medium 1`] = `
<label
  className="ax-toggle ax-toggle--medium ax-toggle--enabled ax-space--x2"
>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={false}
      className="ax-toggle__input"
      disabled={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;

exports[`Toggle renders with size small 1`] = `
<label
  className="ax-toggle ax-toggle--small ax-toggle--enabled ax-space--x2"
>
  <span
    className="ax-toggle__switch"
  >
    <input
      checked={false}
      className="ax-toggle__input"
      disabled={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="ax-toggle__appearance"
    />
  </span>
</label>
`;
